EA-4145 sonar issues